deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ghost
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/name: ghost
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ghost
    spec:
      automountServiceAccountToken: false
      containers:
      - envFrom:
          - configMapRef:
              name: config
        image: ghost
        imagePullPolicy: Always
        name: ghost
        ports:
        - containerPort: 2368
          name: ghost
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            httpHeaders:
            - name: X-Forwarded-Proto
              value: https
            - name: Host
              value: ${DOMAIN}
            path: /ghost/api/v4/admin/site/
            port: 2368
            scheme: HTTP
          initialDelaySeconds: 15
          periodSeconds: 15
          successThreshold: 1
          timeoutSeconds: 2
        resources:
          limits:
            cpu: 500m
            memory: 512M
          requests:
            cpu: 50m
            memory: 128M
        securityContext:
          runAsUser: 65534
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /var/lib/ghost/content
          name: content
          subPath: content
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        fsGroup: 65534
        runAsGroup: 65534
        runAsUser: 65534
      terminationGracePeriodSeconds: 60
      volumes:
      - name: content
        persistentVolumeClaim:
          claimName: ghost
