service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ghost
spec:
  ports:
  - name: http
    port: 2368
    protocol: TCP
    targetPort: 2368
  selector:
    app.kubernetes.io/name: ghost
